--- a/prop/microuser-dev.properties
+++ b/prop/microuser-dev.properties
@@ -9,7 +9,7 @@ spring.datasource.maxActive=20
 spring.datasource.maxWait=60000
 spring.datasource.timeBetweenEvictionRunsMillis=60000
 spring.datasource.minEvictableIdleTimeMillis=60000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.validationQuery=select 1
 spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
